--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/semantic-ui/latest/semantic.min.js"></script>
     <style>
+        .hiddden { display: none !important; }
         .status.takeoff {
             position: absolute;
             bottom: 50px;
@@ -70,7 +71,7 @@
     <span id="gps_lng">0.00</span>
 </div>
 <div class="status takeoff">
-    <div class="ui massive left floated button green" onclick="send_takeoff();">
+    <div class="ui massive left floated button hiddden green" onclick="send_takeoff();">
         Takeoff
     </div>
     <div class="ui massive left floated button green" onclick="send_land();">
