--- a/templates/index.html
+++ b/templates/index.html
@@ -90,7 +90,7 @@
         var curPosition = {lat: 0, lng: 0};
 var icon = {
 
-    url: '../marker.svg',
+    url: '/static/marker.svg',
     scaledSize: new google.maps.Size(80, 80),
     optimized: false
 }
