--- a/templates/index.html
+++ b/templates/index.html
@@ -104,7 +104,7 @@
             zoom: 15,
             center: curPosition
         });
-        marker = new google.maps.Marker({position: curPosition, map: map, draggable: false, icon: icon});
+        marker = new google.maps.Marker({position: curPosition, map: map, draggable: false, icon: droneIcon});
     }
 
     function send_takeoff() {
